kubernetes-networks/dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.org/ssl-services: kubernetes-dashboard
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.org/ssl-backends: "kubernetes-dashboard"
    # nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/dashboard)$ $1/ permanent;
    # nginx.ingress.kubernetes.io/configuration-snippet: rewrite /dashboard/(.*) /$1;
spec:
  rules:
    - host: example.app.org
      http:
       paths:
        # - path: /dashboard
        - path: /dashboard(/|$)(.*)
        # - path: /dashboard/(.*)
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 8443
